Fix foresights deserialization when 1 tile per column left